[package]
name = "wakeclient"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
